<resources>
    <string name="app_name">TestApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_and_charge">Log In and Charge!</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="i_forgot">I Forgot!</string>
    <string name="register_and_benefit">Register and benefit</string>
    <string name="log_in">Log in</string>
    <string name="_1candidate">1Candidate!</string>
    <string name="candidate1_virta_global">candidate1@virta.global</string>
    <string name="filter_by_distance">Press to Filter by distance</string>
    <string name="station_distance">Distance: %1$s</string>
    <string name="hides_kw">Hides kW</string>
    <string name="hides_the_distance_label">Hides the distance label</string>
    <string name="settings">Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>