<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_in_and_charge"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.joanzapata.pdfview.PDFView
                android:id="@+id/cross"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        </LinearLayout>

        <View
            android:id="@+id/view_bottom_linear"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:background="#8A8989"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.joanzapata.pdfview.PDFView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/username"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.joanzapata.pdfview.PDFView
                    android:id="@+id/person"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="40dp" />

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:text="@string/candidate1_virta_global" />
            </LinearLayout>

            <View
                android:id="@+id/view_bottom_linear1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#8A8989"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.joanzapata.pdfview.PDFView
                    android:id="@+id/lock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="40dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:text="@string/_1candidate" />
            </LinearLayout>

            <View
                android:id="@+id/view_bottom_linear2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="#8A8989"
                android:visibility="gone"
                tools:visibility="visible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i_forgot"
                    android:textColor="#2196F3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_and_benefit"
                    android:textColor="#2196F3" />
            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#D3FFEB3B"
            android:gravity="start|center"
            android:padding="16dp"
            android:text="@string/log_in"
            android:textAllCaps="false" />
    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:visibility="gone"
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5CA19696"
        />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
